fix slider on mobile

--- a/src/BestSellers/bestsellers.scss
+++ b/src/BestSellers/bestsellers.scss
@@ -120,7 +120,7 @@
 
                 .slide {
                     margin-right: 0;
-                    height: 410px;
+                    height: 340px;
 
                     .carousel-slide {
                         height: 100%;
@@ -129,15 +129,15 @@
             }
 
             .control-prev{
-                left: 14%;
+                left: 5%;
             }
     
             .control-next{
-                right: 14%;
+                right: 5%;
             }
     
             .carousel-status {
-                left: 30%;
+                left: 15%;
             }
         }
     }
